4 Nov 2017
fix: unset blocks not getting cached
fix: compare array where array is string
fix: error with newsfeeds before bot user created
fix: error with autoshout before bot user created
move: iframe resize to template
remove: checkbox for XBT install
add: missing function
update: config files
remove: unused javascript files
update: admin/block.settings.php
update: user_blocks.php
remove: jquery-ui, can't find any place its being used
replace: iframeResizer.js with one-liner
replace: css/js files are now served pre-gzipped
add: admin view queries page
fix: tooltips on index page last/top/mow torrents
add: style to scrollbar

31 Oct 2017
fix: various typos
add: button to remove alerts
replace: more error/success redirects with session variable and alerts
update: iCarousel 1.2.2
remove: bootstrap from default.css
add: bulma.css
replace: bootstrap classes with bulma classes
update: and validated rss.php
update: getrss.php
remove: 'LOW_PRIORITY' from sql statements, is ignored when using INNODB tables
update: contactstaff.php

31 Oct 2017
add: php extensions check during install
add: missing js files
remove: incorrect references
add: missing functions
fix: ini_get method
fix: installer

22 Oct 2017
update: rules.php
update: faq.php
update: useragreement.php
fix: rules.php, faq.php, useragreement.php accessible when not logged in
update: add anonymizer url to lang files
replace: $#163; with $#36;
update: admin/mega_search.php
add: lottery site alert
add: more staff links to navbar
update: blackjack.php
fix: admin/backup.php checkboxes

21 Oct 2017
fix: browse.php checkbox selection
change: vip to include, not include and only in search results
fix: missing $subs in torrenttable.php
fix: browse.php

20 Oct 2017
add: auto remove alerts that use session variables after 15 seconds
update: trivia pages
fix: removed lines from backup.php
add: breadcrumbs to all pages except index page
update: staffpanel.php
update: view_mailbox.php

18 Oct 2017